maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:17: error: not found: value somme
    somme=somme+1
    ^PledgeMaze:21: error: not found: value somme
    somme=somme+1
    ^PledgeMaze:25: error: not found: value somme
    somme=somme+1
    ^PledgeMaze:29: error: not found: value somme
  somme=somme-1
  ^